[package]
name = "luacparser"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
luac-parser = "0.5.3"
luadec = "0.2.0"
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"




[lib]
name = "luacparser"
crate-type = ["cdylib"]
